k8s/wisecow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow
          image: rajput2117/mydocker_repo1:wisecow:fixed        # use the local image name
          imagePullPolicy: IfNotPresent # don't try to pull from registry
          ports:
            - containerPort: 4499
